syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Trd_Common.proto";

message TrdReconfirmOrderRequest
{
	required PacketID packetID = 1; //交易写操作防重放攻击
	required TrdHeader header = 2; //交易公共参数头
	required uint64 orderID = 3; //订单号
	required int32 reconfirmReason = 4; //需要再次确认订单的原因，参见Trd_Common.ReconfirmOrderReason的枚举定义
}

message TrdReconfirmOrderResponse
{
	required TrdHeader header = 1; //交易公共参数头
	required uint64 orderID = 2; //订单号
}

message TrdReconfirmOrderRequest_Internal
{
	required TrdReconfirmOrderRequest payload = 1;
}

message TrdReconfirmOrderResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required RetType retType = 1 [default = RetType_Unknown];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdReconfirmOrderResponse payload = 4;
}
